--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,30 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+::after,
+::before {
+  box-sizing: inherit;
 }
+
+
+
+h1 {
+  font-size: 30px;
+  font-weight: 900;
+}
+
+/* body {
+  background-color: #e6e6e6;
+  font-family: 'Lato', sans-serif;
+  word-break: break-word;
+  justify-content: center;
+} */
+
+/* main {
+  margin: 50px 20px 20px 20px;
+} */
+  
+  
+
