--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,6 @@ html {
 
 body {
   background-color: #e6e6e6;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   word-break: break-word;
 }
