--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -13,6 +13,10 @@
   border-bottom: 1px solid #cfcfcf;
 }
 
+.tasks__item--hidden {
+  display: none;
+}
+
 .tasks__content--done {
   text-decoration: line-through;
 }
@@ -44,6 +48,4 @@
   background-color: hsl(0, 100%, 65%);
 }
 
-.tasks--hidden {
-  display: none;
-}
+
